# energy-reader

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  plot.awk  plot.gp  shell.nix
src/: cross_correlator.rs  debugdigit.rs  empty_scoped_timer.rs  image_util.rs  main.rs  scoped_timer.rs  sinks.rs  sources.rs
