[package]
name = "utility-reader"
version = "0.1.0"
edition = "2024"

[features]
debug_timing = []   # Measure and log some performance timers

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.0", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png","jpeg"] }
rustfft = "6.4.1"
nokhwa = { version = "0.10.0", features = [ "input-native" ] }
